[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyapp-rollbar"
version = "0.1"
description = "pyApp Messaging Extension for Rollbar"
authors = ["Tim Savage <tim@savage.company>"]
license = "BSD-3-Clause"
packages = [
    { include = "pyapp_ext" },
    { include = "tests", format = "sdist" },
]
readme = "README.rst"
repository = "https://github.com/pyapp-org/pyapp.rollbar"
keywords = ["framework", "application", "rollbar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = "^3.6"
pyapp = "^4.3.0"
rollbar = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-cov = "^2.10.0"

[tool.poetry.plugins."pyapp.extensions"]
"pyapp-rollbar" = "pyapp_ext.rollbar:Extension"
